2014-11-21 Philipp Klaus Krause <philipp@informatik.uni-frankfurt.de>

	* src/stm8/main.c:
	  Comment expaining why we can't use the byte at 0 in C.

2014-11-21 Ben Shi <powerstudio1st AT 163.com>
	* device/lib/stm8/heap.s:
	* device/lib/stm8/Makefile.in:
	  Add support for heap operation.
	* support/regression/tests/gcc-torture-execute-920810-1.c:
	* support/regression/tests/malloc:
	  enable test cases which use malloc().

2014-11-19 Ben Shi <powerstudio1st AT 163.com>
	* sdas/linksrc/aslink.h:
	  Change PATH_MAX to a proper value on x86_64, for bug #2316.

2014-11-18 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/iso646.h,
	  support/regression/tests/iso646.c:
	  Fixed bug #2314.

2014-11-15 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr40057.c:
	  Disable test for host, since it fails on NetBSD.

2014-11-14 Philipp Klaus Krause <pkk AT spth.de>

	* support/sdbinutils/bfd/configure,
	  support/sdbinutils/bfd/warning.m4,
	  support/sdbinutils/binutils/configure:
	  Fixed bug #2280 by disabling -Werror.
	* sdas/linksrc/Makefile.in:
	  Fixed bugs #2310 and #2303.
	* support/regression/tests/gcc-torture-execute-20031012-1.c:
	  Disable test that fails on MacOS.

2014-11-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-pr42544.c:
	  Disable test for host, since it fails on Solaris.

2014-11-11 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/longlong.c:
	  Disable test that fails on 32-bit hosts.

2014-11-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c,
	  src/z80/gen.c,
	  src/stm8/ralloc.c,
	  src/stm8/gen.c,
	  support/regression/tests/longlong.c:
	  Implement unused long long return values.

2014-11-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Fix a long long register allcoation issue.
	* support/regression/tests/gcc-torture-execute-950511-1.c:
	  Disable test that fails on 32-bit hosts.
